tests/ui/consteval/overflow_mul.rx
//@ spec: RXS-0063
// const 求值乘法溢出:100000 * 100000 = 10^10 超出 i32 范围(RX5001)。
const PROD: i32 = 100000 * 100000; //~ ERROR RX5001

fn main() {}
